--- a/application/index/view/peters/setadd.html
+++ b/application/index/view/peters/setadd.html
@@ -81,6 +81,13 @@
                         </div>
                         <div class="hr-line-dashed"></div>
                         <div class="form-group">
+                            <label class="col-sm-2 control-label">数值</label>
+                            <div class="col-sm-7">
+                                <input type="text"  name="val" placeholder="数值" class="form-control" required value="{present name='info'}{$info.val}{/present}">
+                            </div>
+                        </div>
+                        <div class="hr-line-dashed"></div>
+                        <div class="form-group">
                             <label class="col-sm-2 control-label">内容</label>
                             <div class="col-sm-7">
                                 <textarea type="text" cols="30"  rows="5" name="content" placeholder="内容长度200" class="form-control" required >{present name='info'}{$info.content}{/present}</textarea>
