--- a/application/index/view/datacensus/index.html
+++ b/application/index/view/datacensus/index.html
@@ -107,7 +107,7 @@
                 <div class="ibox-content">
                     <h5>本日访问量</h5>
                     <h2 class="todayBrowse"></h2>
-                    <div id="sparkline1"></div>
+                    <div id="sparkline"></div>
                 </div>
             </div>
         </div>
@@ -116,7 +116,7 @@
                 <div class="ibox-content">
                     <h5>本日实名用户</h5>
                     <h2 class="face_today_user"></h2>
-                    <div id="sparkline4"></div>
+                    <div id="sparkline11"></div>
                 </div>
             </div>
         </div>
@@ -125,7 +125,7 @@
                 <div class="ibox-content">
                     <h5>本日产出学分</h5>
                     <h2 class="credit_today"></h2>
-                    <div id="sparkline7"></div>
+                    <div id="sparkline12"></div>
                 </div>
             </div>
         </div>
@@ -154,7 +154,7 @@
                 <div class="ibox-content">
                     <h5>本周产出学分</h5>
                     <h2 class="credit_weeks"></h2>
-                    <div id="sparkline8"></div>
+                    <div id="sparkline13"></div>
                 </div>
             </div>
         </div>
@@ -165,7 +165,7 @@
                 <div class="ibox-content">
                     <h5>本月访问量</h5>
                     <h2 class="monthBrowse"></h2>
-                    <div id="sparkline3"></div>
+                    <div id="sparkline14"></div>
                 </div>
             </div>
         </div>
@@ -174,7 +174,7 @@
                 <div class="ibox-content">
                     <h5>本月访实名用户</h5>
                     <h2 class="face_month_user"></h2>
-                    <div id="sparkline6"></div>
+                    <div id="sparkline15"></div>
                 </div>
             </div>
         </div>
@@ -183,7 +183,7 @@
                 <div class="ibox-content">
                     <h5>本月学分产出</h5>
                     <h2 class="credit_month"></h2>
-                    <div id="sparkline9"></div>
+                    <div id="sparkline16"></div>
                 </div>
             </div>
         </div>
@@ -223,7 +223,7 @@
                 <div class="ibox-content">
                     <h5>本日学分打赏</h5>
                     <h2 class="credit_d_today"></h2>
-                    <div id="sparkline1"></div>
+                    <div id="sparkline17"></div>
                 </div>
             </div>
         </div>
@@ -232,7 +232,7 @@
                 <div class="ibox-content">
                     <h5>本日平台打赏</h5>
                     <h2 class="daybrow">0</h2>
-                    <div id="sparkline4"></div>
+                    <div id="sparkline18"></div>
                 </div>
             </div>
         </div>
@@ -241,7 +241,7 @@
                 <div class="ibox-content">
                     <h5>本日才学堂学分收入</h5>
                     <h2 class="todayCredit"></h2>
-                    <div id="sparkline7"></div>
+                    <div id="sparkline19"></div>
                 </div>
             </div>
         </div>
@@ -250,7 +250,7 @@
                 <div class="ibox-content">
                     <h5>本日才学堂现金收入</h5>
                     <h2 class="todayMoney"></h2>
-                    <div id="sparkline7"></div>
+                    <div id="sparkline20"></div>
                 </div>
             </div>
         </div>
@@ -261,7 +261,7 @@
                 <div class="ibox-content">
                     <h5>本周学分打赏</h5>
                     <h2 class="credit_d_weeks"></h2>
-                    <div id="sparkline1"></div>
+                    <div id="sparkline21"></div>
                 </div>
             </div>
         </div>
@@ -270,7 +270,7 @@
                 <div class="ibox-content">
                     <h5>本周平台打赏</h5>
                     <h2 class="daybrow">0</h2>
-                    <div id="sparkline4"></div>
+                    <div id="sparkline22"></div>
                 </div>
             </div>
         </div>
@@ -279,7 +279,7 @@
                 <div class="ibox-content">
                     <h5>本周才学堂学分收入</h5>
                     <h2 class="weekCredit"></h2>
-                    <div id="sparkline7"></div>
+                    <div id="sparkline23"></div>
                 </div>
             </div>
         </div>
@@ -288,7 +288,7 @@
                 <div class="ibox-content">
                     <h5>本周才学堂现金收入</h5>
                     <h2 class="weekMoney"></h2>
-                    <div id="sparkline7"></div>
+                    <div id="sparkline24"></div>
                 </div>
             </div>
         </div>
@@ -300,7 +300,7 @@
                 <div class="ibox-content">
                     <h5>本月学分打赏</h5>
                     <h2 class="credit_d_month"></h2>
-                    <div id="sparkline1"></div>
+                    <div id="sparkline25"></div>
                 </div>
             </div>
         </div>
@@ -309,7 +309,7 @@
                 <div class="ibox-content">
                     <h5>本月平台打赏</h5>
                     <h2 class="daybrow">0</h2>
-                    <div id="sparkline4"></div>
+                    <div id="sparkline26"></div>
                 </div>
             </div>
         </div>
@@ -318,7 +318,7 @@
                 <div class="ibox-content">
                     <h5>本月才学堂学分收入</h5>
                     <h2 class="monthCredit"></h2>
-                    <div id="sparkline7"></div>
+                    <div id="sparkline27"></div>
                 </div>
             </div>
         </div>
@@ -327,7 +327,7 @@
                 <div class="ibox-content">
                     <h5>本月才学堂现金收入</h5>
                     <h2 class="monthMoney"></h2>
-                    <div id="sparkline7"></div>
+                    <div id="sparkline28"></div>
                 </div>
             </div>
         </div>
@@ -367,11 +367,17 @@
                 <div class="ibox-content">
                     <h5>累计才学堂现金收入</h5>
                     <h2 class="totalMoney"></h2>
-                    <div id="sparkline7"></div>
+                    <div id="sparkline8"></div>
                 </div>
             </div>
         </div>
     </div>
+
+    <div class="today" id="todaytable"></div>
+    <div class="weeks" id="weektable"></div>
+    <div class="month" id="monthtable"></div>
+    <div class="year"  id="yeartable"></div>
+
     <div class="row">
         <div class="col-sm-6">
             <div class="ibox float-e-margins">
@@ -504,8 +510,70 @@
 </body>
 
 <script>
+    function createTable(label, data, tableElement,name) {
+        //创建表格
+        var div = $("<div style='width: 98% ;text-align: center'><h3>"+ name+ "</h3></div>");
+        var table = $("<table > </table>");
+
+        //设定样式
+        table.css({
+            width: "98%",
+            "border-collapse": "collapse",
+            border: "0px solid #d0d0d0",
+            margin: "3px",
+            "font-size": "14px",
+        });
+        //标题行
+        var tr = $("<tr></tr>");
+        tr.css({
+            border: "1px solid #d0d0d0",
+            height: "30px",
+            color: "#FFF",
+            background: "#37b5ad"
+        });
+        $.each(data, function (index, value) {
+            var index=index+1
+            var th = $("<th style='text-align:center;'>" + index +label+ "</th>");
+            th.appendTo(tr);
+        });
+        tr.appendTo(table);
+        var tr2 = $("<tr></tr>");
+        tr.css({
+            border: "1px solid #d0d0d0",
+            height: "30px",
+            color: "#FFF",
+            background: "#37b5ad"
+        });
+        $.each(data, function (index, value) {
+            var th = $("<td align='center'>" + value + "</td>");
+            th.css({
+                border: "1px solid #d0d0d0",
+                height: "24px",
+                align:"center"
+            });
+            th.appendTo(tr2);
+        });
+        tr2.appendTo(table);
+        /*$.each(data, function (index, row) {
+            //数据行
+            var tr = $("<tr><td style='border:1px solid #d0d0d0;height: 24px ' >" + index + "小时</td>" +
+                "<td style='border:1px solid #d0d0d0;height: 24px '>" + row + "</td></tr>");
+            //数据列
+            $.each(row, function (row) {
+                var td = $("<td>" + row + "</td>");
+                td.css({
+                    border: "1px solid #d0d0d0",
+                    height: "24px"
+                });
+                td.appendTo(tr);
+            });
+            tr.appendTo(table);
+        });*/
+        div.appendTo(tableElement);
+        table.appendTo(tableElement);
+    }
     $(function () {
-            $('.today').show();
+        $('.today').show();
         $.ajax({
             url: "{:\\think\\Url::build('Datacensus/data')}",
             data: {'type':'today'},
@@ -523,8 +591,12 @@
                     var advanced_count = data.order.advanced_count;  // 新增人数
                     var advanced_sum_score = data.order.advanced_sum_score;  // 新增人数
                     var advanced_sum_value = data.order.advanced_sum_value;  // 新增人数
-
-
+                    createTable('小时',pv,$('#todaytable'),'流量表')
+                    createTable('小时',uv,$('#todaytable'),'新增人数')
+                    createTable('小时',hpv,$('#todaytable'),'荣誉值')
+                    createTable('小时',luv,$('#todaytable'),'学习力')
+                    createTable('小时',dpv,$('#todaytable'),'贡献')
+                    createTable('小时',cuv,$('#todaytable'),'学分')
                     var user_today_new = data.daydata.user_today_new;//1今日注册用户
                     var face_today_user = data.daydata.face_today_user;//2今日认证用户
 
@@ -667,6 +739,7 @@
         $('.month').hide();
         $('.weeks').hide();
         $('.year').hide();
+
         $.ajax({
             url: "{:\\think\\Url::build('Datacensus/data')}",
             data: {'type':'today'},
@@ -684,6 +757,7 @@
                     var advanced_count = data.order.advanced_count;  // 新增人数
                     var advanced_sum_score = data.order.advanced_sum_score;  // 新增人数
                     var advanced_sum_value = data.order.advanced_sum_value;  // 新增人数
+
                     var user_today_new = data.daydata.user_today_new;//1今日注册用户
                     var face_today_user = data.daydata.face_today_user;//2今日认证用户
                     var credit_today = data.daydata.credit_today;//4今日系统学分产出
@@ -816,6 +890,8 @@
         $('.weeks').hide();
         $('.year').hide();
         $('.today').hide();
+        $('#monthtable').empty()
+
         if(value=='month'){
             $("#month").attr("class","btn btn-primary")
             $("#today").attr("class","btn btn-white");
@@ -843,7 +919,12 @@
                     var advanced_sum_value = data.order.advanced_sum_value;  // 新增人数
                     var user_moth_new = data.daydata.user_moth_new;//1本月注册用户
                     var monthBrowse = data.daydata.monthBrowse;//2本月访问量
-
+                    createTable('号',pv,$('#monthtable'),'流量表')
+                    createTable('号',uv,$('#monthtable'),'新增人数')
+                    createTable('号',hpv,$('#monthtable'),'荣誉值')
+                    createTable('号',luv,$('#monthtable'),'学习力')
+                    createTable('号',dpv,$('#monthtable'),'贡献')
+                    createTable('号',cuv,$('#monthtable'),'学分')
 
                     var face_month_user = data.daydata.face_month_user;//4今日系统学分产出
                     var credit_month = data.daydata.credit_month;//6今日打赏学分产出
@@ -972,6 +1053,7 @@
         $('.year').hide();
         $('.today').hide();
         $('.month').hide();
+        $('#weektable').empty()
         if(value=='weeks'){
             $("#month").attr("class","btn btn-white")
             $("#today").attr("class","btn btn-white");
@@ -998,7 +1080,12 @@
                     var user_weeks_new = data.daydata.user_weeks_new;//1今日注册用户
                     var face_weeks_user = data.daydata.face_weeks_user;//2今日认证用户
 
-
+                    createTable('周',pv,$('#weektable'),'流量表')
+                    createTable('周',uv,$('#weektable'),'新增人数')
+                    createTable('周',hpv,$('#weektable'),'荣誉值')
+                    createTable('周',luv,$('#weektable'),'学习力')
+                    createTable('周',dpv,$('#weektable'),'贡献')
+                    createTable('周',cuv,$('#weektable'),'学分')
                     var credit_weeks = data.daydata.credit_weeks;//4今日系统学分产出
                     var credit_d_weeks = data.daydata.credit_d_weeks;//6今日打赏学分产出
 
@@ -1128,6 +1215,7 @@
         $('.weeks').hide();
         $('.today').hide();
         $('.month').hide();
+        $('#yeartable').empty()
         if(value=='year'){
             $("#month").attr("class","btn btn-white")
             $("#today").attr("class","btn btn-white");
@@ -1151,6 +1239,12 @@
                     var advanced_count = data.order.advanced_count;  // 新增人数
                     var advanced_sum_score = data.order.advanced_sum_score;  // 新增人数
                     var advanced_sum_value = data.order.advanced_sum_value;  // 新增人数
+                    createTable('月',pv,$('#yeartable'),'流量表')
+                    createTable('月',uv,$('#yeartable'),'新增人数')
+                    createTable('月',hpv,$('#yeartable'),'荣誉值')
+                    createTable('月',luv,$('#yeartable'),'学习力')
+                    createTable('月',dpv,$('#yeartable'),'贡献')
+                    createTable('月',cuv,$('#yeartable'),'学分')
                     var user_all = data.daydata.user_all;//1本月注册用户
                     var Browse = data.daydata.Browse;//2本月访问量
                     var face_user = data.daydata.face_user;//4今日系统学分产出
@@ -1273,6 +1367,20 @@
                 }
             }
         })
+    }
+    function arrToTwoDim(arr, n = 2) {
+        var arr2 = []
+        for (var i = 0, j = 0; i < arr.length; i += n) {
+            // 初始化数组单个元素为数组
+            arr2[j] = []
+            for (var k = 0; k < n; k++) {
+                if (i + k < arr.length)
+                    arr2[j].push(arr[i + k])
+            }
+            j++
+        }
+        console.log(arr2)
+        return arr2
     }
 </script>
 
