--- a/application/index/view/user/honor.html
+++ b/application/index/view/user/honor.html
@@ -52,6 +52,20 @@
                                             <label>用户</label>
                                             <input type="text" name="name" id="name" placeholder="用户名称/ID/手机号" class="form-control" value="">
                                         </div>
+                                        <div class="form-group">
+                                            <label>来源&nbsp;&nbsp;</label>
+                                            <select class="form-control" id="type" name="type">
+                                                <option value="" >-请选择来源-</option>
+
+                                                <option value="1">购买课程</option>
+                                                <option value="2">加成学习</option>
+                                                <option value="3">直推实名好友</option>
+                                                <option value="4">分享每日金句</option>
+                                                <option value="5">转发文章</option>
+
+
+                                            </select>
+                                        </div>
                                          <div class="form-group">
                                             <label>时间&nbsp;&nbsp;</label>
                                             <input type="text" name="time" placeholder="请选择时间" class="form-control" value="" id="scoretime">
