--- a/application/index/view/user/index.html
+++ b/application/index/view/user/index.html
@@ -135,6 +135,7 @@
                                         <th data-field="learning_power" data-sortable="true" align="center">学习力</th>
                                         <th data-field="honor_value" data-sortable="true" align="center">荣誉值</th>
                                         <th data-field="is_auth" data-formatter="formatAuth" align="center">是否认证</th>
+                                        <th data-field="card_level" data-formatter="formatcard_level" align="center">会员卡类型</th>
                                         <th data-field="regetime" data-formatter="formatTime" align="center" data-sortable="true">注册时间</th>
                                         <th data-field="lasttime" data-formatter="formatTime" align="center" data-sortable="true">最近登录时间</th>
                                         <th data-field="" data-formatter="formatOperation" class="col-sm-2" align="center">操作</th>
@@ -489,6 +490,15 @@
              return '未认证';
          }else if(value == 1) {
              return '已认证';
+         }
+     }
+     function formatcard_level(value) {
+         if(value == 0) {
+             return '无';
+         }else if(value == 1) {
+             return '学霸金卡';
+         }else if(value == 1) {
+             return '学霸黑金卡';
          }
      }
 
